--- a/mean/bower.json
+++ b/mean/bower.json
@@ -106,8 +106,7 @@
     "videojs-record": "^1.6.1",
     "angular-audio": "ngAudio#^1.7.3",
     "angular-pdf-viewer": "^0.2.13",
-    "angular-translate-storage-cookie": "^2.15.1",
-    "ng-webcam": "^0.4.1"
+    "angular-translate-storage-cookie": "^2.15.1"
   },
   "overrides": {
     "bootstrap": {
@@ -122,7 +121,7 @@
     }
   },
   "resolutions": {
-    "angular": ">=1.2.26 <1.7",
+    "angular": ">=1.4.0",
     "angular-ui-router": "~0.4.2",
     "jquery": ">=1.9.0",
     "fastclick": "~1.0.6",
